--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -6,7 +6,7 @@
   font-size: 40px;
   text-align: center;
   margin: 1rem;
-  color: var(--ourOrange);
+  color: var(--ourPrimary);
   font-family: var(--logoFont);
 }
 
