--- a/src/components/CreateShoppingList/CreateShoppingList.css
+++ b/src/components/CreateShoppingList/CreateShoppingList.css
@@ -3,6 +3,7 @@
   max-width: 85%;
   margin: auto;
   text-align: center;
+  font-family: var(--secondaryFonts);
 }
 
 .CreateShoppingList {
@@ -12,10 +13,10 @@
 .CreateShoppingList-pageTitle {
   color: black;
   padding: 10px;
-  font-weight: 600;
   text-align: center;
   margin-bottom: 1vh;
   font-size: 1.5em;
+  font-family: var(--headerFont);
 }
 
 .CreateShoppingListForm {
@@ -37,7 +38,7 @@ input#name {
 }
 
 .error-prompt {
-  color: red;
+  color: var(--ourWarningColor);
 }
 
 .store-search {
@@ -45,24 +46,31 @@ input#name {
 }
 
 .selected-store {
+  font-family: var(--secondaryFonts);
   padding: 2%;
   border-radius: 15px;
   list-style-type: none;
   margin-top: 5%;
   margin-bottom: 5%;
-
-  background-color: var(--ourOrange);
+  background-color: var(--listBoxBG2);
+  box-shadow: 1px 1px #d1c9c9;
   text-align: center;
   font-size: 20px;
   color: black;
 }
 
+.no-store-submit {
+  background-color: var(--ourSecondary);
+}
+
 .select-new-store {
   margin: 5px 0px;
+  background-color: var(--ourSecondary);
 }
 
 .create-list {
   margin: 5px 0px;
+  background-color: var(--ourSecondary);
 }
 
 .search-question {
@@ -73,24 +81,23 @@ input#name {
 }
 
 .store-result {
-  border: 1px solid var(--ourOrange);
   border-radius: 15px;
   text-align: center;
   list-style-type: none;
   width: 100%;
   padding: 2%;
   margin-top: 5%;
-  background-color: var(--ourOrange);
+  background-color: var(--listBoxBG2);
+  box-shadow: 1px 1px #d1c9c9;
   text-align: center;
   font-size: 20px;
   color: black;
 }
 .store-result strong {
-  font-family: var(--secondaryFonts);
+  font-family: var(--headerFont);
   font-size: 1rem;
   margin-bottom: 1vh;
   color: black;
-  font-weight: bold;
 }
 
 .store-search-results {
@@ -147,6 +154,7 @@ button {
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
+  background-color: var(--ourSecondary);
 }
 
 .location-blue {
