--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -9,7 +9,10 @@
 
 .shoppingLists {
   text-align: center;
-  margin-top: 15%;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
 }
 
 .shoppingLists ul {
