--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,10 +10,11 @@
   --fadedBack: rgba(255, 255, 255, 0.1);
   --cardBgColor: #eeeeee;
   --ourPrimary: #fd9452;
-  --ourSecondary: #35a38a;
+  --ourCompliment: #35a38a;
+  --ourSecondary: #85dad5;
   --listBoxBG: #dee8eba6;
   --ourButtonDefault: #90989b;
-  --listBoxBG2: #bce9dfa6;
+  --listBoxBG2: #d3f2f0a6;
 }
 html * {
   box-sizing: border-box;
