--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,7 +14,8 @@
   --ourSecondary: #85dad5;
   --listBoxBG: #dee8eba6;
   --ourButtonDefault: #90989b;
-  --listBoxBG2: #d3f2f0a6;
+  /* --listBoxBG2: #d3f2f0a6; */
+  --listBoxBG2: #dee8eba6;
 }
 html * {
   box-sizing: border-box;
