Restyle list name header and update icons
Now, this uses absolutely positioned icons in order to maintain centering. The
font sizes are shrunk a little bit as well to save vertical real estate.

--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -127,23 +127,33 @@
   font-family: var(--secondaryFonts);
 }
 
+.listTitle .listNameForm,
+.listTitle h1 {
+  position: relative;
+  display: inline-block;
+}
+
 .listTitle h1 {
   font-family: var(--headerFont);
   text-transform: capitalize;
-  font-size: 2em;
-  margin-bottom: 1vh;
+  font-size: 1.8rem;
 }
 
-.listTitle h3 {
+.listTitle .editButton {
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 100%;
+  padding: 0 1ex;
+  background: inherit;
+  font-size: 1rem;
+}
+
+.listTitle .storeAddress {
   font-family: var(--secondaryFonts);
-  padding-bottom: 0.5vh;
+  margin-top: 0.5em;
 }
 
-.editIcon {
-  font-weight: 100;
-  margin-left: 3px;
-  text-decoration: none;
-}
 .edit-item {
   margin: 0 0 8px 10px;
   font-size: 1.2em;
