--- a/src/components/RegistrationPage/RegistrationPage.css
+++ b/src/components/RegistrationPage/RegistrationPage.css
@@ -2,6 +2,14 @@
   max-width: 768px;
   margin: 0 auto;
   padding: 0 1rem;
+  display: inline-block;
+  min-width: 100%;
+  background: url('/ourBgFlipped.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 .RegistrationPage header {
