--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -51,6 +51,9 @@
 
 .listTitle {
   font-family: var(--secondaryFonts);
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
   text-transform: capitalize;
   text-align: center;
   background-color: #dee8eb88;
