--- a/src/components/CreateShoppingList/CreateShoppingList.css
+++ b/src/components/CreateShoppingList/CreateShoppingList.css
@@ -10,7 +10,7 @@
   clear: both;
   max-width: 600px;
   margin: auto;
-  margin-top: 5%;
+  margin-top: 10px;
 }
 
 .CreateShoppingList-pageTitle {
@@ -50,16 +50,20 @@ input#name {
 
 .selected-store {
   font-family: var(--secondaryFonts);
-  padding: 2%;
+  padding: 10px;
   border-radius: 15px;
   list-style-type: none;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 10px;
+  margin-bottom: 10px;
   background-color: var(--listBoxBG2);
   box-shadow: 1px 1px #d1c9c9;
   text-align: center;
   font-size: 20px;
   color: black;
+}
+
+.selected-store p {
+  font-family: var(--headerFont);
 }
 
 .no-store-submit {
@@ -88,8 +92,8 @@ input#name {
   text-align: center;
   list-style-type: none;
   width: 100%;
-  padding: 2%;
-  margin-top: 5%;
+  padding: 10px;
+  margin-top: 10px;
   background-color: var(--listBoxBG2);
   box-shadow: 1px 1px #d1c9c9;
   text-align: center;
