--- a/src/components/Lists/Lists.css
+++ b/src/components/Lists/Lists.css
@@ -12,7 +12,7 @@
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10%;
+  margin-top: 25px;
 }
 
 .shoppingLists ul {
@@ -22,25 +22,16 @@
   text-align: center;
 }
 
-.shoppingLists li {
-  padding: 5%;
-  border-radius: 15px;
-  list-style-type: none;
-  margin-bottom: 5%;
-  background-color: var(--ourOrange);
-  text-align: center;
-}
-
 .shoppingLists a {
   text-decoration: none;
   color: black;
 }
 
 .shoppingLists li {
-  padding: 2%;
+  padding: 10px;
   border-radius: 15px;
   list-style-type: none;
-  margin-bottom: 5%;
+  margin: 15px 0px;
   background-color: var(--listBoxBG);
   text-align: center;
   font-size: 20px;
