--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -128,6 +128,7 @@
   width: 100%;
   margin: auto;
   padding: auto;
+  padding-left: 10px;
   font-family: var(--secondaryFonts);
 }
 
@@ -188,7 +189,6 @@
   border: none;
   outline: none;
   cursor: pointer;
-  /* text-align: left; */
   padding: 0.5em 0;
   background-color: var(--fadedBack);
 }
