--- a/src/components/Page404/Page404.css
+++ b/src/components/Page404/Page404.css
@@ -27,13 +27,14 @@
 
 .page404 main {
   margin: 0 auto;
-  padding: 40px;
+  padding: 20px;
   max-width: 600px;
   border-radius: 4px;
   position: relative;
 }
 
 .text-container {
+  margin-top: 30px;
   display: inline-block;
   border-radius: 15px;
   text-align: center;
