--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -128,8 +128,11 @@
   width: 100%;
   margin: auto;
   padding: auto;
-  padding-left: 10px;
   font-family: var(--secondaryFonts);
+}
+
+.ShoppingListItem--editing .editingItem {
+  padding-left: 10px;
 }
 
 .listTitle .listNameForm,
