--- a/src/components/Items/Items.css
+++ b/src/components/Items/Items.css
@@ -123,6 +123,10 @@
   margin-bottom: 5px;
 }
 
+.ShoppingListItem--editing.ShoppingListItem--disabled {
+  background-color: var(--fadedBack);
+}
+
 .ShoppingListItem--editing input {
   display: inline-block;
   width: 100%;
