--- a/src/css/index.css
+++ b/src/css/index.css
@@ -64,6 +64,10 @@ a.button:visited {
   color: inherit;
 }
 
+a.button {
+  color: inherit;
+}
+
 input {
   padding: 0.5em 1em;
   border: 1px solid #aaaaaa;
