--- a/src/components/CreateShoppingList/CreateShoppingList.css
+++ b/src/components/CreateShoppingList/CreateShoppingList.css
@@ -62,6 +62,11 @@ input#name {
   color: black;
 }
 
+.google-maps-link {
+  color: black;
+  text-decoration: underline;
+}
+
 .selected-store p {
   font-family: var(--headerFont);
 }
@@ -179,8 +184,4 @@ button {
 
 .loading-spinner {
   text-align: center;
-}
-
-.google-maps-link {
-  color: #0645ad;
 }
