Fix button backgrounds to be white
Previously we were using the defaults (which in chrome were white). Now
hardcoding those defaults

--- a/src/components/ShoppingList/ShoppingList.css
+++ b/src/components/ShoppingList/ShoppingList.css
@@ -19,7 +19,7 @@
 }
 
 .list-delete-btn button {
-  font-size: 12px;
+  font-size: 0.85rem;
   margin: 5px;
 }
 
@@ -31,4 +31,8 @@
 #confirmDelete {
   background-color: var(--ourWarningColor);
   font-weight: bold;
+}
+
+#cancelDelete {
+  background: white;
 }
