--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -77,3 +77,18 @@
     grid-row-start: 1;
   }
 }
+
+@media only screen and (min-width: 890px) {
+  .LandingPage {
+    padding: 0 1em;
+
+    display: inline-block;
+    min-width: 100%;
+    background: url('/bgFullFlipped.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-height: 100vh;
+  }
+}
