background image set for full screen

--- a/src/components/RegistrationPage/RegistrationPage.css
+++ b/src/components/RegistrationPage/RegistrationPage.css
@@ -30,3 +30,17 @@
   border-radius: 4px;
   background-color: var(--cardBgColor);
 }
+
+@media only screen and (min-width: 890px) {
+  .RegistrationPage {
+    padding: 0 1em;
+    display: inline-block;
+    min-width: 100%;
+    background: url('/bgFullFlipped.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-height: 100vh;
+  }
+}
